deploy/k8s/overlays/test/observability/delete-non-observability.yaml
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: redis
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: ws-gateway
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger-ui
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-service
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-gateway
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swagger-ui
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-gateway-api
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-gateway-websocket
$patch: delete
